Disable 2D canvas deferral on text rendering when compositing

SkPicture currently has a hard time realizing a surface change may mean
a LCD font rendering change. So we can't send deferred SkPicture when
drawing texts

BUG=682074

Review-Url: https://codereview.chromium.org/2877833002
Cr-Commit-Position: refs/heads/master@{#471808}

Former-commit-id: ee1c820d0133c0536a55b5a0aaf808a97c471bde